--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "clsx": "^2.1.0",
     "framer-motion": "^11.0.8",
+    "lucide-react": "^0.354.0",
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
