--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,15 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 
-# local env files
-.env*.local
+# env files
+*.env
 
 # vercel
 .vercel
 
+# prisma
+/prisma/migrations
+ 
 # typescript
 *.tsbuildinfo
 next-env.d.ts
