--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
-    "tailwind-merge": "^2.2.1"
+    "tailwind-merge": "^2.2.1",
+    "tailwindcss-animated": "^1.0.1"
   },
   "devDependencies": {
     "@types/node": "^20.11.25",
