--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.1.3",
     "react": "^18",
     "react-dom": "^18",
+    "sharp": "^0.33.2",
     "tailwind-merge": "^2.2.1",
     "tailwindcss-animated": "^1.0.1"
   },
